<resources>
    <string name="app_name">ShopifyApi</string>
    <string name="please_select_payment">Please select a Payment Method</string>
    <string name="web_payment_label">Use the card to pay for on our website</string>
    <string name="card_payment_label">Use the card to pay for on our app</string>
    <string name="android_payment_label">You can use any credit or debit card in your Google Account (including your cards in Android Pay) for quick, easy checkout</string>
    <string name="web_payment">Pay on our website</string>
    <string name="card_payment">Pay by Card</string>
    <string name="android_payment">Android Pay</string>

    <string name="pay_button">Pay</string>
    <string name="card_name_error">The card holder name is incorrect</string>
    <string name="card_date_error">The card\'s expiration date is invalid</string>
    <string name="card_cvv_error">The card\'s security code is invalid</string>
    <string name="card_number_error">The card number is incorrect</string>
    <string name="payment_canceled">Payment canceled</string>
    <string name="to_shipping_method_label">Continue to shipping method</string>
    <string name="billing_address">Billing Address</string>
    <string name="add_billing_address">Add Billing Address</string>
    <string name="use_same_address">Use the same address for payment and delivery</string>
    <string name="shipping_empty_fields_error">Please fill required fields on the shipping screen</string>
    <string name="address_empty_fields_error">Please fill all required fields</string>
    <string name="empty_shipping_rates_message">There are no suitable deliveries</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit / Debit Card</string>
    <string name="add_card">Add card</string>
    <string name="add_payment_type">Add payment type</string>
    <string name="card_holder_name">Card holder name*</string>
    <string name="card_number">Card number*</string>
    <string name="expiration_date">Expiration date</string>
    <string name="month">Month*</string>
    <string name="year">Year*</string>
    <string name="cvv">CVV*</string>
    <string name="card_type_placeholder">%1$s (%2$s)</string>
    <string name="card_unknown_placeholder">(%s)</string>
    <string name="card_exp_placeholder">Exp: %1$s / %2$s</string>
    <string name="shipping_options">Shipping options</string>
    <string name="please_add_shipping_address_first">Please, add shipping address first</string>
    <string name="order_can_not_be_processed">Due to technical reasons the order can not be processed</string>
    <string name="place_order">Place order</string>
    <string name="customer_email">Customer Email</string>
    <string name="we_accept">We accept</string>
    <string name="your_purchase_could_not_be_completed">Your purchase couldn\'t be completed</string>
    <string name="back_to_shop">Back to shop</string>
    <string name="something_happened">Something happened…</string>
    <string name="delete_address_message">Are you sure you want to delete this address?</string>
    <string name="edit_address_message">Are you sure you want to edit this address?</string>

</resources>
