<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ui.base.view.BaseToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creditCardPay"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_credit_card"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/credit_card"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/androidPay"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_android"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/android_payment"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditCardPay" />

    <TextView
        android:id="@+id/webPay"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_web"
        android:gravity="center_vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/web_payment"
        android:textColor="@color/textColorPrimary"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/androidPay" />

</android.support.constraint.ConstraintLayout>