<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <com.ui.custom.UpperCaseHintTextInputLayout
            android:id="@+id/holderNameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            android:animateLayoutChanges="true"
            android:hint="@string/card_holder_name"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/holderNameInput"
                style="@style/TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:lines="1" />
        </com.ui.custom.UpperCaseHintTextInputLayout>

        <com.ui.custom.UpperCaseHintTextInputLayout
            android:id="@+id/cardNumberInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:animateLayoutChanges="true"
            android:hint="@string/card_number"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/holderNameInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cardNumberInput"
                style="@style/TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1" />
        </com.ui.custom.UpperCaseHintTextInputLayout>

        <TextView
            android:id="@+id/expirationDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:paddingStart="3dp"
            android:text="@string/expiration_date"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimaryTransparent"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout"
            tools:ignore="RtlSymmetry" />

        <com.ui.custom.UpperCaseHintTextInputLayout
            android:id="@+id/monthInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:hint="@string/month"
            android:textColorHint="@color/textColorPrimary"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:layout_constraintEnd_toStartOf="@+id/yearInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expirationDateLabel">

            <com.ui.custom.UnMutableTextInputEditText
                android:id="@+id/monthInput"
                style="@style/TextInputEditText"
                android:drawableEnd="@drawable/ic_small_arrow_down"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/textColorPrimary" />
        </com.ui.custom.UpperCaseHintTextInputLayout>

        <com.ui.custom.UpperCaseHintTextInputLayout
            android:id="@+id/yearInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/year"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/monthInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/expirationDateLabel">

            <com.ui.custom.UnMutableTextInputEditText
                android:id="@+id/yearInput"
                style="@style/TextInputEditText"
                android:drawableEnd="@drawable/ic_small_arrow_down"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/textColorPrimary" />
        </com.ui.custom.UpperCaseHintTextInputLayout>

        <com.ui.custom.UpperCaseHintTextInputLayout
            android:id="@+id/cvvInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:animateLayoutChanges="true"
            android:hint="@string/cvv"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monthInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cvvInput"
                style="@style/TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1" />
        </com.ui.custom.UpperCaseHintTextInputLayout>

        <Button
            android:id="@+id/submitButton"
            style="@style/PrimaryButton"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="48dp"
            android:enabled="false"
            android:text="@string/pay_with_this_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvvInputLayout" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
